First step to implement TextField

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ add_subdirectory(FrontPanelIO/c++)
 add_executable(valueBarTest
     main.cpp
     ValueBarDrawer.cpp
-    ValueDrawer.cpp)
+    TextField.cpp)
 target_link_libraries(valueBarTest 
     HALFpSim
     FPIOHandler
