--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,7 +52,8 @@
         "utility": "cpp",
         "__config": "cpp",
         "__nullptr": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "list": "cpp"
     },
     "editor.detectIndentation": false
 }
