created GraphicWidgets separation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,15 @@ set (CMAKE_CXX_STANDARD 11)
 project(ValueBarTest C CXX)
 
 add_subdirectory(FrontPanelIO)
+add_subdirectory(GraphicWidgets)
+
 
 add_executable(valueBarTest
     main.cpp
-    ValueBarDrawer.cpp
-    TextField.cpp)
+)
+
 target_link_libraries(valueBarTest 
     HALFpSim
     FpInputHandler
-    FpDisplayHandler
+    GraphicWidgets
 )
